replaced slider images and fixed slider controls z-index

--- a/client/styles/components/_slider.scss
+++ b/client/styles/components/_slider.scss
@@ -39,7 +39,7 @@
 
 .slider-control {
   position: absolute;
-  z-index: 10;
+  z-index: 1;
   top: 50%;
   transform: translateY(-50%);
 
