--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -1143,7 +1143,7 @@ footer h3 {
 
 .slider-control {
   position: absolute;
-  z-index: 10;
+  z-index: 1;
   top: 50%;
   transform: translateY(-50%);
 }
